# logos

./: Cargo.toml  LICENSE  README.md
assets/: eng-kjv.osis.xml.xz
src/: bible.rs  config.rs  error.rs  filesystem.rs  main.rs  prelude.rs  tui.rs  utils.rs
src/app/: actions.rs  data.rs  events.rs  mod.rs  state.rs  state_dashboard.rs  state_default_reader.rs  state_startup_screen.rs
src/components/: book_column.rs  book_reader.rs  books_view.rs  footer.rs  mod.rs  references.rs  splash_screen.rs  strongs.rs
