[package]
name = "logos"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11"
indexmap = "2.13.0"
log = "0.4.29"
quick-xml = "0.39.2"
ratatui = "0.30.0"
thiserror = "2.0.18"
tui-big-text = "0.8.2"
xz2 = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
